[gd_scene load_steps=11 format=3 uid="uid://cq50knxuh7my7"]

[ext_resource type="Script" path="res://World/World.gd" id="1_5cyge"]
[ext_resource type="PackedScene" uid="uid://yjridncq22f4" path="res://Player/Player.tscn" id="2_vjn3s"]
[ext_resource type="Texture2D" uid="uid://dhtiiw0reg08y" path="res://assets/sky/1.png" id="3_6jg0e"]
[ext_resource type="PackedScene" uid="uid://ffg8t0j35gfb" path="res://Enemy/Enemy.tscn" id="3_7wodh"]
[ext_resource type="Texture2D" uid="uid://ba5l52r160dd7" path="res://assets/sky/2.png" id="4_3hc3f"]
[ext_resource type="Texture2D" uid="uid://jiqk6nf32e5c" path="res://assets/sky/3.png" id="5_sid13"]
[ext_resource type="Shader" path="res://World/DottedGrid.gdshader" id="8_05eaq"]
[ext_resource type="PackedScene" uid="uid://bl66jvk0rmpop" path="res://Coin/Coin.tscn" id="8_qe0rg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uldll"]
size = Vector2(3566, 73)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ucbgw"]
shader = ExtResource("8_05eaq")
shader_parameter/cell_size = 4.0
shader_parameter/dot_size = 0.2
shader_parameter/background_color = Color(0.12, 0.12, 0.12, 0)
shader_parameter/dot_color = Color(0, 0, 0, 1)
shader_parameter/resolution = Vector2(1024, 1024)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/anti_aliasing_factor = 0.0
shader_parameter/stochastic_samples = 16

[node name="World" type="Node2D"]
script = ExtResource("1_5cyge")
enemy_scene = ExtResource("3_7wodh")
coin_scene = ExtResource("8_qe0rg")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
position = Vector2(576, 324)
scale = Vector2(2, 2)
texture = ExtResource("3_6jg0e")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_repeat = 2
position = Vector2(576, 324)
scale = Vector2(2, 2)
texture = ExtResource("4_3hc3f")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture_repeat = 2
position = Vector2(576, 324)
scale = Vector2(2, 2)
texture = ExtResource("5_sid13")

[node name="Player" parent="." instance=ExtResource("2_vjn3s")]
position = Vector2(98, 160)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(716, -34)
shape = SubResource("RectangleShape2D_uldll")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(730, 672)
shape = SubResource("RectangleShape2D_uldll")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="CoinSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ucbgw")
offset_right = 1184.0
offset_bottom = 696.0

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="CoinSpawnTimer" to="." method="_on_coin_spawn_timer_timeout"]
